crates/plotnik-tests/tests/04-emit/bytecode/binding/anonymous_token_inadmissible_in_parent.txt
Q = (array "+")
------------------ DIAGNOSTICS -------------------
error: the grammar builds no `array` with these children
 --> query.ptk:1:6
  |
1 | Q = (array "+")
  |      ^^^^^
  |
help: `array` allows children `expression` or `spread_element`
